docs: ✏️ add swagger to user
