# docs/swagger.yaml
@@ -1,5 +1,35 @@
 basePath: /
 definitions:
+  dto.UserCreationRequest:
+    properties:
+      name:
+        type: string
+      password:
+        type: string
+      user_id:
+        type: string
+    required:
+    - name
+    - password
+    - user_id
+    type: object
+  dto.UserCreationResponse:
+    properties:
+      createdAt:
+        type: string
+      email:
+        type: string
+      name:
+        type: string
+      text:
+        type: string
+      themeColor:
+        type: string
+      userID:
+        type: string
+      visitors:
+        type: integer
+    type: object
   dto.UserDetailResponse:
     properties:
       name:
@@ -62,4 +92,53 @@ paths:
       summary: Login
       tags:
       - auth
+  /get:
+    get:
+      consumes:
+      - application/json
+      description: healthcheck
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      summary: healthcheck
+      tags:
+      - default
+  /user:
+    post:
+      consumes:
+      - application/json
+      description: Create User
+      parameters:
+      - description: user_id, password, name(닉네임)
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserCreationRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.UserCreationResponse'
+        "400":
+          description: 값을 누락하고 보냈거나, 값의 타입이 잘못된 경우
+          schema:
+            type: string
+        "409":
+          description: 'Conflict: 이미 id가 존재하는 경우'
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: user
+      tags:
+      - user
 swagger: "2.0"
